fix(card, modal, select, core): contraste
hr
footer modal
button card
icon select

--- a/src/component/card/style/module/_content.scss
+++ b/src/component/card/style/module/_content.scss
@@ -104,7 +104,8 @@
     @include padding-bottom(20v); // 8v (padding card) + 6v (icon) + 2v (padding end) + 4v (marge texte icon)
   }
 
-  &#{ns(enlarge-link)} &__title a {
+  &#{ns(enlarge-link)} &__title a,
+  &#{ns(enlarge-button)} &__title button {
     @include preference.forced-colors {
       text-decoration: none;
     }
