--- a/src/component/select/style/_module.scss
+++ b/src/component/select/style/_module.scss
@@ -16,6 +16,12 @@
   background-repeat: no-repeat;
   background-position: spacing.space(calc(100% - 4v) 50%);
   background-size: spacing.space(4v 4v);
+
+  @include before {
+    @include preference.forced-colors {
+      background-image: url("<svg xmlns='http://www.w3.org/2000/svg' x='0px' y='0px' viewBox='0 0 24 24' ><path d='M12,13.1l5-4.9l1.4,1.4L12,15.9L5.6,9.5l1.4-1.4L12,13.1z'/></svg>");
+    }
+  }
 }
 
 #{ns(select-group)} {
